Add weighted material selection for logs/leaves replacement
- Add MaterialWeightedPicker utility for weighted random material selection
- Update Settings to use Map<String,Integer> for material fields (weight maps)
- Update TreeGrowEvent to use weighted picker per-block
- Add load-time validation warnings for weight maps != 100%
- Update config.yml to new weighted YAML format
- Update and add tests (52 total, all passing)

Agent-Logs-Url: https://github.com/BentoBoxWorld/DimensionalTrees/sessions/b97d7b1d-0ada-40f7-b764-6febf71e1896

Co-authored-by: tastybento <4407265+tastybento@users.noreply.github.com>